[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/fondo.png" type="Texture" id=1]
[ext_resource path="res://Jugador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Principal.gd" type="Script" id=3]
[ext_resource path="res://Manzana.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Verde.tscn" type="PackedScene" id=6]
[ext_resource path="res://Lobo.tscn" type="PackedScene" id=7]

[node name="Principal" type="Node"]
script = ExtResource( 3 )
Manzana = ExtResource( 4 )
Poder = ExtResource( 6 )
tiempoJuego = 10

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="ContenedorManzana" type="Node" parent="."]

[node name="InicioJugador" type="Position2D" parent="."]
position = Vector2( 242, 564 )

[node name="TimerJuego" type="Timer" parent="."]

[node name="Jugador" parent="." instance=ExtResource( 2 )]
velocidad = 250

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PoderesTimer" type="Timer" parent="."]
one_shot = true

[node name="Lobo" parent="." instance=ExtResource( 7 )]

[node name="InicioLobo" type="Position2D" parent="."]
position = Vector2( 455, 297 )

[connection signal="timeout" from="TimerJuego" to="." method="_on_TimerJuego_timeout"]
[connection signal="golpe" from="Jugador" to="." method="_on_Jugador_golpe"]
[connection signal="recoge" from="Jugador" to="." method="_on_Jugador_recoge"]
[connection signal="nuevo_juego" from="HUD" to="." method="_on_HUD_nuevo_juego"]
[connection signal="timeout" from="PoderesTimer" to="." method="_on_PoderesTimer_timeout"]
